# BT2_a1

./: .gitignore  Cargo.toml  LICENSE  README.md
auth-api/: package.json  server.js
auth-api/models/: User.js
auth-api/routes/: auth.js
src/: main.rs
src/api/: coingecko.rs  cryptonews.rs  mod.rs
src/models/: news.rs
src/services/: aggregator.rs
templates/: index.html
