[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
askama = "0.12"  # Templating for HTML
actix-web = { version = "4", features = ["cookies"] }
dotenv = "0.15"  # For reading API keys from .env
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
vader_sentiment = "0.1"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-identity = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }

